{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 672,
  "lineage": "250cc92e-f1ea-4a92-00e8-73b466289eea",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "network_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:loadbalancer/net/tf-lb-20250122130434376100000001/02b393258de32f50",
            "arn_suffix": "net/tf-lb-20250122130434376100000001/02b393258de32f50",
            "dns_name": "tf-lb-20250122130434376100000001-02b393258de32f50.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:loadbalancer/net/tf-lb-20250122130434376100000001/02b393258de32f50",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "tf-lb-20250122130434376100000001",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05f9bfe23c197b615"
              },
              {
                "subnet_id": "subnet-07833ac752ec8d715"
              }
            ],
            "subnets": [
              "subnet-05f9bfe23c197b615",
              "subnet-07833ac752ec8d715"
            ],
            "tags": {
              "Name": "gis-pov-dev-nlb"
            },
            "tags_all": {
              "Name": "gis-pov-dev-nlb"
            },
            "vpc_id": "vpc-0c9e8d23f77fe7872",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.nodered",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nodered_nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:listener/net/tf-lb-20250122130434376100000001/02b393258de32f50/823a41c76a725349",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-nred-tg/6f945b9300079dc4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:listener/net/tf-lb-20250122130434376100000001/02b393258de32f50/823a41c76a725349",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:loadbalancer/net/tf-lb-20250122130434376100000001/02b393258de32f50",
            "port": 1880,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.network_load_balancer",
            "module.ecs.module.nodered.aws_lb_target_group.ecs_nodered_target_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.nodered",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_nodered_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-nred-tg/6f945b9300079dc4",
            "arn_suffix": "targetgroup/gis-pov-dev-nred-tg/6f945b9300079dc4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-nred-tg/6f945b9300079dc4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "gis-pov-dev-nred-tg",
            "port": 1880,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "gis-pov-devnodered-tg"
            },
            "tags_all": {
              "Name": "gis-pov-devnodered-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.nodered",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodered_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:security-group/sg-0e678053edecdfd46",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e678053edecdfd46",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1880,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1880
              }
            ],
            "name": "terraform-2025012212482012640000000a",
            "name_prefix": "terraform-",
            "owner_id": "516371590104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gis-pov-dev-nodered-sg"
            },
            "tags_all": {
              "Name": "gis-pov-dev-nodered-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.spark",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "spark_api_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:listener/net/tf-lb-20250122130434376100000001/02b393258de32f50/edc46099ce25c5fe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-spark-api-tg/d299894606df0e49",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:listener/net/tf-lb-20250122130434376100000001/02b393258de32f50/edc46099ce25c5fe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:loadbalancer/net/tf-lb-20250122130434376100000001/02b393258de32f50",
            "port": 6066,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.network_load_balancer",
            "module.ecs.module.spark.aws_lb_target_group.ecs_spark_master_api_target_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.spark",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "spark_history_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:listener/net/tf-lb-20250122130434376100000001/02b393258de32f50/3082f00c135b4091",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-spark-history-tg/87f1c3eec5eefdbd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:listener/net/tf-lb-20250122130434376100000001/02b393258de32f50/3082f00c135b4091",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:loadbalancer/net/tf-lb-20250122130434376100000001/02b393258de32f50",
            "port": 18080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.network_load_balancer",
            "module.ecs.module.spark.aws_lb_target_group.ecs_spark_history_target_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.spark",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "spark_master_ui_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:listener/net/tf-lb-20250122130434376100000001/02b393258de32f50/02714c4632aaf2db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-spark-master-ui-tg/7bf54b79d4a65286",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:listener/net/tf-lb-20250122130434376100000001/02b393258de32f50/02714c4632aaf2db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:loadbalancer/net/tf-lb-20250122130434376100000001/02b393258de32f50",
            "port": 8080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.network_load_balancer",
            "module.ecs.module.spark.aws_lb_target_group.ecs_spark_master_ui_target_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.spark",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "spark_worker_ui_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:listener/net/tf-lb-20250122130434376100000001/02b393258de32f50/ac1fea24fa3620b5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-spark-worker-ui-tg/4d7a30897e2b2a21",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:listener/net/tf-lb-20250122130434376100000001/02b393258de32f50/ac1fea24fa3620b5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:loadbalancer/net/tf-lb-20250122130434376100000001/02b393258de32f50",
            "port": 8081,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.network_load_balancer",
            "module.ecs.module.spark.aws_lb_target_group.ecs_spark_worker_ui_target_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.spark",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_spark_history_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-spark-history-tg/87f1c3eec5eefdbd",
            "arn_suffix": "targetgroup/gis-pov-dev-spark-history-tg/87f1c3eec5eefdbd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-spark-history-tg/87f1c3eec5eefdbd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "gis-pov-dev-spark-history-tg",
            "port": 18080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.spark",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_spark_master_api_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-spark-api-tg/d299894606df0e49",
            "arn_suffix": "targetgroup/gis-pov-dev-spark-api-tg/d299894606df0e49",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-spark-api-tg/d299894606df0e49",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "gis-pov-dev-spark-api-tg",
            "port": 6066,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.spark",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_spark_master_ui_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-spark-master-ui-tg/7bf54b79d4a65286",
            "arn_suffix": "targetgroup/gis-pov-dev-spark-master-ui-tg/7bf54b79d4a65286",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-spark-master-ui-tg/7bf54b79d4a65286",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "gis-pov-dev-spark-master-ui-tg",
            "port": 8080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.spark",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_spark_worker_ui_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-spark-worker-ui-tg/4d7a30897e2b2a21",
            "arn_suffix": "targetgroup/gis-pov-dev-spark-worker-ui-tg/4d7a30897e2b2a21",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-spark-worker-ui-tg/4d7a30897e2b2a21",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "gis-pov-dev-spark-worker-ui-tg",
            "port": 8081,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.spark",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spark_master_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:security-group/sg-026a2a4e2724002be",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026a2a4e2724002be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 18080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 18080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6066,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6066
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7077,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7077
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20250122124819952900000009",
            "name_prefix": "terraform-",
            "owner_id": "516371590104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gis-pov-dev-spark-master-sg"
            },
            "tags_all": {
              "Name": "gis-pov-dev-spark-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.spark",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spark_worker_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:security-group/sg-0b80f6cbf54b94baa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b80f6cbf54b94baa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7077,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7077
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026a2a4e2724002be"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "terraform-2025012212482245290000000b",
            "name_prefix": "terraform-",
            "owner_id": "516371590104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gis-pov-dev-spark-sg"
            },
            "tags_all": {
              "Name": "gis-pov-dev-spark-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.spark.aws_security_group.spark_master_security_group",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.timescaledb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "timescaledb_nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:listener/net/tf-lb-20250122130434376100000001/02b393258de32f50/54015954c59c38dc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-tsdb-tg/714835234e9f34b4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:listener/net/tf-lb-20250122130434376100000001/02b393258de32f50/54015954c59c38dc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:loadbalancer/net/tf-lb-20250122130434376100000001/02b393258de32f50",
            "port": 5432,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.network_load_balancer",
            "module.ecs.module.timescaledb.aws_lb_target_group.ecs_timescaledb_target_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.timescaledb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_timescaledb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-tsdb-tg/714835234e9f34b4",
            "arn_suffix": "targetgroup/gis-pov-dev-tsdb-tg/714835234e9f34b4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:516371590104:targetgroup/gis-pov-dev-tsdb-tg/714835234e9f34b4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "gis-pov-dev-tsdb-tg",
            "port": 5432,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "gis-pov-dev-tsdb-tg"
            },
            "tags_all": {
              "Name": "gis-pov-dev-tsdb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.timescaledb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "timescaledb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:security-group/sg-0a67f2944207c9835",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a67f2944207c9835",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20250122124819432600000007",
            "name_prefix": "terraform-",
            "owner_id": "516371590104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gis-pov-dev-timescaledb-sg"
            },
            "tags_all": {
              "Name": "gis-pov-dev-timescaledb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:security-group/sg-0d7968238290b6b84",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7968238290b6b84",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "terraform-20250122130829016400000001",
            "name_prefix": "terraform-",
            "owner_id": "516371590104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gis-pov-dev-efs-sg"
            },
            "tags_all": {
              "Name": "gis-pov-dev-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073fa7121ac5df417",
            "association_id": "eipassoc-041160f00d497ec17",
            "domain": "vpc",
            "id": "eipalloc-073fa7121ac5df417",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-025405c291ada83f8",
            "private_dns": "ip-10-0-0-119.eu-west-1.compute.internal",
            "private_ip": "10.0.0.119",
            "public_dns": "ec2-34-248-212-109.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.248.212.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gis-pov-dev-nat-eip-eu-west-1a"
            },
            "tags_all": {
              "Name": "gis-pov-dev-nat-eip-eu-west-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": "eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08374f730c88e282c",
            "association_id": "eipassoc-07caafa5f7c8d2ea8",
            "domain": "vpc",
            "id": "eipalloc-08374f730c88e282c",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-09298b160ae25730e",
            "private_dns": "ip-10-0-1-159.eu-west-1.compute.internal",
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-34-247-10-151.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.247.10.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gis-pov-dev-nat-eip-eu-west-1b"
            },
            "tags_all": {
              "Name": "gis-pov-dev-nat-eip-eu-west-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:internet-gateway/igw-0f029fa00c4fea47c",
            "id": "igw-0f029fa00c4fea47c",
            "owner_id": "516371590104",
            "tags": {
              "Name": "gis-pov-dev-internet-gateway"
            },
            "tags_all": {
              "Name": "gis-pov-dev-internet-gateway"
            },
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073fa7121ac5df417",
            "connectivity_type": "public",
            "id": "nat-0d55230009cc203fe",
            "network_interface_id": "eni-025405c291ada83f8",
            "private_ip": "10.0.0.119",
            "public_ip": "34.248.212.109",
            "subnet_id": "subnet-05f9bfe23c197b615",
            "tags": {
              "Name": "gis-pov-dev-nat-gw-eu-west-1a"
            },
            "tags_all": {
              "Name": "gis-pov-dev-nat-gw-eu-west-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08374f730c88e282c",
            "connectivity_type": "public",
            "id": "nat-09399d450e0399585",
            "network_interface_id": "eni-09298b160ae25730e",
            "private_ip": "10.0.1.159",
            "public_ip": "34.247.10.151",
            "subnet_id": "subnet-07833ac752ec8d715",
            "tags": {
              "Name": "gis-pov-dev-nat-gw-eu-west-1b"
            },
            "tags_all": {
              "Name": "gis-pov-dev-nat-gw-eu-west-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:route-table/rtb-09ef636d615e22641",
            "id": "rtb-09ef636d615e22641",
            "owner_id": "516371590104",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d55230009cc203fe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gis-pov-dev-private-rt-eu-west-1a"
            },
            "tags_all": {
              "Name": "gis-pov-dev-private-rt-eu-west-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:route-table/rtb-06b2c26977944f3c6",
            "id": "rtb-06b2c26977944f3c6",
            "owner_id": "516371590104",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09399d450e0399585",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gis-pov-dev-private-rt-eu-west-1b"
            },
            "tags_all": {
              "Name": "gis-pov-dev-private-rt-eu-west-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:route-table/rtb-0fee3d819c42f18b7",
            "id": "rtb-0fee3d819c42f18b7",
            "owner_id": "516371590104",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f029fa00c4fea47c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gis-pov-dev-public-rt"
            },
            "tags_all": {
              "Name": "gis-pov-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c92cc8ddcf4d873",
            "route_table_id": "rtb-09ef636d615e22641",
            "subnet_id": "subnet-0006f3e4e7b7d2fcf"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9979be4dfdeb8ef",
            "route_table_id": "rtb-06b2c26977944f3c6",
            "subnet_id": "subnet-003cddfe37b8fff0e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081f5d11d8d8e978c",
            "route_table_id": "rtb-0fee3d819c42f18b7",
            "subnet_id": "subnet-05f9bfe23c197b615"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5736859de9579a9",
            "route_table_id": "rtb-0fee3d819c42f18b7",
            "subnet_id": "subnet-07833ac752ec8d715"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:security-group/sg-02c00134fe14209e7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c00134fe14209e7",
            "ingress": [],
            "name": "terraform-20250122124819144100000005",
            "name_prefix": "terraform-",
            "owner_id": "516371590104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gis-pov-dev-private-security-group"
            },
            "tags_all": {
              "Name": "gis-pov-dev-private-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:security-group/sg-0c8c27b2fa241540c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8c27b2fa241540c",
            "ingress": [],
            "name": "terraform-20250122124819143100000004",
            "name_prefix": "terraform-",
            "owner_id": "516371590104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gis-pov-dev-public-sg"
            },
            "tags_all": {
              "Name": "gis-pov-dev-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:subnet/subnet-0006f3e4e7b7d2fcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0006f3e4e7b7d2fcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "516371590104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gis-pov-dev-private-subnet-eu-west-1a"
            },
            "tags_all": {
              "Name": "gis-pov-dev-private-subnet-eu-west-1a"
            },
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "eu-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:subnet/subnet-003cddfe37b8fff0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003cddfe37b8fff0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "516371590104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gis-pov-dev-private-subnet-eu-west-1b"
            },
            "tags_all": {
              "Name": "gis-pov-dev-private-subnet-eu-west-1b"
            },
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:subnet/subnet-05f9bfe23c197b615",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f9bfe23c197b615",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "516371590104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gis-pov-dev-pub-subnet-eu-west-1a"
            },
            "tags_all": {
              "Name": "gis-pov-dev-pub-subnet-eu-west-1a"
            },
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "eu-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:subnet/subnet-07833ac752ec8d715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07833ac752ec8d715",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "516371590104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gis-pov-dev-pub-subnet-eu-west-1b"
            },
            "tags_all": {
              "Name": "gis-pov-dev-pub-subnet-eu-west-1b"
            },
            "vpc_id": "vpc-0c9e8d23f77fe7872"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:516371590104:vpc/vpc-0c9e8d23f77fe7872",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0852d9b5721e23cf7",
            "default_route_table_id": "rtb-0aab3c6b9c55593f5",
            "default_security_group_id": "sg-098546782575fed34",
            "dhcp_options_id": "dopt-03eeb75db6aaaba1f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c9e8d23f77fe7872",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aab3c6b9c55593f5",
            "owner_id": "516371590104",
            "tags": {
              "Name": "gis-pov-dev-vpc"
            },
            "tags_all": {
              "Name": "gis-pov-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}